Append for some files changed to false to rewrite on old files

--- a/sample.in
+++ b/sample.in
@@ -3,4 +3,8 @@ entry class Sample2 :
         print("Hello World!");
         return 0;
     end
+    function f2() returns int :
+        var a = main();
+        return 0;
+    end
 end
