--- a/sample.in
+++ b/sample.in
@@ -1,10 +1,7 @@
-entry class Sample2 :
+entry class Test :
     function main() returns int :
-        print("Hello World!");
-        return 0;
-    end
-    function f2() returns int :
-        var a = main();
+        var a = 10;
+        //print(a);
         return 0;
     end
 end
