--- a/sample.in
+++ b/sample.in
@@ -1,7 +1,7 @@
 entry class Test :
     function main() returns int :
-        var a = 10;
-        //print(a);
+        var a = "aaa";
+        print(a);
         return 0;
     end
 end
