Local variables handled. But their type can't be trusted from accepting by expressionTypeExtractor

--- a/sample.in
+++ b/sample.in
@@ -1,7 +1,10 @@
 entry class Test :
     function main() returns int :
         var a = "aaa";
-        print(a);
+        begin
+            print(a);
+            var a = 5;
+        end
         return 0;
     end
 end
