--- a/sample.in
+++ b/sample.in
@@ -1,9 +1,12 @@
 entry class Test :
+    public field yyy int;
     function main() returns int :
         var a = "aaa";
+        yyy = 20;
+        //print(yyy);
         begin
-            print(a);
-            var a = 5;
+            //print(a);
+            //var a = 5;
         end
         return 0;
     end
