Working on assign2

--- a/sample.in
+++ b/sample.in
@@ -3,7 +3,7 @@ entry class Test :
     function main() returns int :
         var a = "aaa";
         yyy = 20;
-        //print(yyy);
+        print(yyy);
         begin
             //print(a);
             //var a = 5;
