--- a/sample.in
+++ b/sample.in
@@ -1,8 +1,9 @@
 entry class Test :
     public field yyy int;
     function main() returns int :
-        yyy = 20;
-        print(yyy);
+        var a = new int[10];
+        a[5] = 33;
+        print(a[5*1+1]);
         return 0;
     end
 end
