assign and fieldCall done.

--- a/sample.in
+++ b/sample.in
@@ -1,9 +1,15 @@
 entry class Test :
     public field yyy int;
     function main() returns int :
-        var a = new int[10];
-        a[5] = 33;
-        print(a[5*1+1]);
+        //var a = new int[10];
+        //var i = 2;
+        //a[i] = i;
+        //print(a[i]);
+
+        var c = new Test();
+        c.yyy = 3;
+        print(c.yyy);
+
         return 0;
     end
 end
