in front of labels is now empty and the next command comes after it

--- a/sample.in
+++ b/sample.in
@@ -3,8 +3,10 @@ entry class Test :
     function main() returns int :
         var x = 2;
         while ( x <> 4 )
+        begin
             print(x);
             x = x + 1;
+        end
     end
 end
 
