--- a/sample.in
+++ b/sample.in
@@ -1,10 +1,12 @@
 entry class Test :
     public field yyy int;
     function main() returns int :
-        var x = 2;
-        while ( x <> 4 )
-            x = x + 1;
+        var x = new int[3];
+        x[0] = 0;
+        x[1] = 1;
+        x[2] = 2;
         print(x);
+        return 0;
     end
 end
 
