--- a/sample.in
+++ b/sample.in
@@ -3,9 +3,13 @@ entry class Test :
     function main() returns int :
         var a = new Test();
         var b = new Test();
+        var c = 10;
         b = a;
         if(a == b)
+        begin
             print(1);
+            print(10);
+        end
         else
             print(2);
             return 0;
