bug in constructor resolved

--- a/sample.in
+++ b/sample.in
@@ -1,6 +1,7 @@
 entry class Test :
     public field x string;
     function main() returns int :
+        x = "zhivar";
         print(x);
         return 0;
     end
