--- a/sample.in
+++ b/sample.in
@@ -1,12 +1,18 @@
 entry class Test :
-    public field x string;
+    //public field x bool[];
     function main() returns int :
-        x = "zhivar";
-        print(x);
+        var x = new string[2];
+        var z = new int[2];
+        z[0] = 2;
+        z[1] = 3;
+        var y = new string[2];
+        //x = y;
+        if (x == y)
+            print(1);
+        else
+            print(z);
         return 0;
     end
 end
 
 
-// a[0].b[0] array call
-// String init
