array equality fixed

--- a/sample.in
+++ b/sample.in
@@ -1,18 +1,29 @@
-entry class Test :
-    //public field x bool[];
+
+entry class Sample2 inherits a:
     function main() returns int :
-        var x = new string[2];
-        var z = new int[2];
-        z[0] = 2;
-        z[1] = 3;
-        var y = new string[2];
-        //x = y;
-        if (x == y)
-            print(1);
+        var a = 2;
+        var b = f();
+        var s1 = new string[2];
+        var s2 = new string[2];
+        var ss = "a";
+        var bb = "ba";
+        s1[0] = ss;
+        s2[0] = bb;
+        var i1 = new int[1];
+        var i2 = new int[1];
+        if(ss == bb)
+            print("True");
         else
-            print(z);
-        return 0;
+            print("False");
+
+        return 10;
     end
+
 end
 
+class a:
+    function f() returns bool[]:
+        return new bool[3];
+    end
+end
 
